--- a/paramfiles/params.yaml
+++ b/paramfiles/params.yaml
@@ -10,6 +10,7 @@ binning_file: "binning_corr_coeff.fits"
 
 init_cmb_file: "Cb_example.dat"
 A_file: "A.dat"
+cov_fg_file: "cov_fg.dat"
 
 chains_path: "../gibbs_results/"
 
@@ -18,104 +19,105 @@ parameters:
 
   Aplanck:
     init: 1
-    proposal: 0.0013/2
+    proposal: 0.0006
     prior:
       min: 0.958
       max: 1.041
 
   c0:
     init: 0.0
-    proposal: 0.0009/2
+    proposal: 0.0005
     prior:
       min: -0.028
       max: 0.028
+
   c1:
     init: 0.0
-    proposal: 0.0009/2
+    proposal: 0.0005
     prior:
       min: -0.031
       max: 0.031
 
   c3:
     init: 0.0
-    proposal: 0.0008/2
+    proposal: 0.0005
     prior:
       min: -0.024
       max: 0.024
 
   c4:
     init: 0.0
-    proposal: 0.0009/2
+    proposal: 0.0005
     prior:
       min: -0.028
       max: 0.028
 
   c5:
     init: 0.0
-    proposal: 0.0009/2
+    proposal: 0.0005
     prior:
       min: -0.028
       max: 0.028
 
   Aradio:
     init: 1.61984
-    proposal: 0.04/2
+    proposal: 0.025
     prior:
       min: 0.29
       max: 3.10
 
   Adusty:
     init: 0.781192
-    proposal: 0.03/2
+    proposal: 0.02
     prior:
       min: 0
       max: 2
 
   AdustTT:
     init: 1
-    proposal: 0.03/2
+    proposal: 0.015
     prior:
       min: 0
       max: 2
 
   AdustPP:
     init: 1
-    proposal: 0.05/2
+    proposal: 0.025
     prior:
       min: 0
       max: 2.5
 
   AdustTP:
     init: 1
-    proposal: 0.05/2
+    proposal: 0.025
     prior:
       min: 0
       max: 2.5
 
   Asz:
     init: 1
-    proposal: 0.08/2
+    proposal: 0.04
     prior:
       min: 0
       max: 3.88
 
   Acib:
     init: 1
-    proposal: 0.05/2
+    proposal: 0.025
     prior:
       min: 0
       max: 3
 
   Aksz:
     init: 0.6
-    proposal: 0.03/2
+    proposal: 0.015
     prior:
       min: 0
       max: 10
 
   Aszxcib:
     init: 1
-    proposal: 0.03/2
+    proposal: 0.015
     prior:
       min: 0
       max: 10
